--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>com.socleBackend.web</groupId>
+	<groupId>com.socleBackend.Back</groupId>
 	<artifactId>Socle-Backend</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
@@ -101,6 +101,13 @@
             <artifactId>mail</artifactId>
             <version>${mail.version}</version>
         </dependency>
+        
+       	<dependency>
+            <groupId>javax.mail</groupId>
+            <artifactId>mail</artifactId>
+            <version>${mail.version}</version>
+        </dependency>
+        
 	</dependencies>
 	
 	<build>
